logs/Slang/generated/keywords/5.6.2--keyword_disable.sv.log
name: disable
description: The 'disable' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_disable.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_disable.sv:8:8: error: expected declarator
    bit disable;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_disable.sv:8:9: error: expected member
    bit disable;
        ^~~~~~~
